<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/pic_size"
        android:layout_height="@dimen/pic_size"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:src="@drawable/channel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@color/black_light">
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="10"
            android:text="@string/sohieu"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/h"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/b"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/d"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/t"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/p"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="15"
            android:text="@string/A"
            android:textSize="18sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

   <ListView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/listView">
   </ListView>
</LinearLayout>