<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/pic_size"
        android:layout_height="@dimen/pic_size"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:src="@drawable/pipe" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="10sp"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/dkn"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/D"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/socay"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/t"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/pc"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>