<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/pic_size"
        android:layout_height="@dimen/pic_size"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:src="@drawable/gkdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/banner_height"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/sohieu_gkdc"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/banner_height"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/p"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/banner_height"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/A"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

   <ListView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/listView">
   </ListView>
</LinearLayout>